# supersleuth-network

./: .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  LICENSE  MODULE_STATUS.md  README.md  dashboard_launcher.py  event_viewer.py  pyproject.toml  requirements.txt  setup.py  view_logs.sh
.claude/commands/: dashboard.md  event-viewer.md  generate-report.md  monitor.md  network-scan.md  quick-scan.md  security-check.md  wifi-analysis.md
.github/workflows/: python-test.yml
.taskmaster/: state.json
.taskmaster/docs/: supersleuth_prd.md
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
config/: logging_config.py
docs/: CLAUDE_CODE_COMMANDS.md  CLAUDE_CODE_GUIDE.md  EVENT_LOGGING.md  QUICK_START_TASKS.md  README.md
docs/authentication/: QUICK_REFERENCE.md  README.md
docs/claude-integration/: README.md  prompt-templates.md  workflow-examples.md
docs/development/: IMPLEMENTATION_TASKS.md  PRODUCTION_READINESS.md
docs/modules/: topology_interference_guide.md
docs/security-modules/: README.md  cve_database.md  security_scanner.md  vulnerability_reporter.md
examples/: advanced_diagnostics_demo.py  authentication_demo.py  basic_network_scan.py  claude_code_integration.py  claude_security_workflows.py  compliance_assessment_demo.py  dhcp_diagnostics_demo.py  dns_diagnostics_demo.py  enterprise_diagnostic_demo.py  event_logging_demo.py  hipaa_real_check.py  http_diagnostics_demo.py  integrated_network_scan.py  integrated_topology_example.py  network_metrics_demo.py  network_scanning_demo.py  port_scanner_demo.py  quick_soc2_check.py  routing_diagnostics_demo.py  security_assessment_demo.py  show_real_functionality.py  test_topology_simple.py  topology_interference_demo.py  vulnerability_scanning_demo.py
examples/claude_code_scenarios/: connectivity_issues.py  performance_degradation.py  security_incident.py  (+1 more)
scripts/: setup_dev.sh  track_progress.py
src/: __init__.py
(+53 files in other folders)
